fix(social): center on mobile

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1212,8 +1212,8 @@ footer {
 .social {
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: row; }
+  flex-direction: row;
+  justify-content: center; }
   @media (min-width: 768px) and (max-width: 991px) {
     .social {
       justify-content: flex-start; } }
